--- a/src/components/CardContainer/style.css
+++ b/src/components/CardContainer/style.css
@@ -1,10 +1,10 @@
 .wrapper {
   padding-top: 50px;
-  background: #eceff1;
+  background: transparent;
   height: 100%;
   display: flex;
   flex-wrap: wrap;
   padding: 20px;
   justify-content: space-around;
-  /* overflow: auto; */
+  margin-top: 20px;
 }
