--- a/src/components/GargoyleCard/style.css
+++ b/src/components/GargoyleCard/style.css
@@ -17,7 +17,6 @@
   padding: 3px;
   border: 5px solid #000000;
   background-color: #ff0;
-  /* border-radius: 5%; */
   position: relative;
 }
 
@@ -31,14 +30,13 @@
 }
 
 .flip-card-inner {
-  /* border-radius: 5%; */
   position: absolute;
   width: 260px;
   height: 200px;
   text-align: center;
   transition: transform 0.8s;
   transform-style: preserve-3d;
-  box-shadow: 0 0 20px #3f3e3e;
+  box-shadow: 0 0 30px #000000;
 }
 
 .flip-card:hover .flip-card-inner {
@@ -61,7 +59,6 @@
   transform: rotateY(180deg);
   padding: 3px;
   border: 5px solid #000000;
-  /* border-radius: 5%; */
 }
 
 /* Media Queries for Mobile */
