prepared package.json for deployment to github pages, finished app.js logic; user can only score if they click different cards, if same card is clicked twice, score resets. few react component changes to jsx. also added some touch up custom css. added media queries for mobile

--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -4,4 +4,20 @@
   text-align: center;
   box-shadow: 0 -10px 20px -1px #070309;
   font-family: "Open Sans", sans-serif;
+  text-shadow: 2px 2px #000000; /* Makes a text shadow */
+}
+
+#bigBro {
+  margin-top: 10px;
+}
+
+#logoContainer {
+  position: relative;
+  float: right;
+  bottom: 40px;
+}
+
+#linkedInLogo {
+  margin-left: 10px;
+  margin-right: 10px;
 }
